// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elevation ElevationFifth should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ inIbcS"
/>
`;

exports[`Elevation ElevationFirst should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ juehZy"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ ujWeo"
/>
`;

exports[`Elevation ElevationFourth should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ huWhBy"
/>
`;

exports[`Elevation ElevationSecond should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ edAgNy"
/>
`;

exports[`Elevation ElevationThird should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ firkjW"
/>
`;
